# plex-catalog-backend

./: .dockerignore  Cargo.toml  Dockerfile  TODO  schema.sql
.sqlx/: query-0151f30b505381d815cc476a85cf0f514cd5e4b130aaf3b65b3b54644638d21b.json  query-0432743f9751b413a7ed5aadab211c21f6c4da71fb906c8816455389129ca6c7.json  query-050573ab291a5a717b184978b95d8401150fd05633bf9871add3abfe00d92a33.json  query-0594f4bb27fa779279f89ee8bdfb71d977bc2755e9d17b0943a23cab824f1f91.json  query-078fd61fd452d713908e3e5bc18881d3acb71aa4d14f6f6f6a556f2808dc612a.json  query-09189a9e2b63a5207f7fcb53e9c590dc10151cffc3846acbe061844a5cd79842.json  query-0dc3df65a316e7b20806f7ddbcc42ea83bba54bd0fee19df1ca2aeb21602728c.json  query-10de99b0cccc83a819841ba0e150e26f25321c8953805af7fd96e1a023c5c5c5.json  query-12901ee4cf47e4281b981231eeb2eebebf1b64baa0fd064c43615f98f9ea1f99.json  query-12c02627c5cc0ef091e8f74b44d2d6442317c92cc45ccdbd94f0affad5ac6220.json  query-136bf925fdc9575a2003d50c68dd34874b57f6ce4035d987680b32ec149df8e8.json  query-151c604a0563519910712d57e9f241c249bc3d2017f1abd641c3659d5f820866.json  query-16d67824d8e6b6d940e111e0817f421216e4be806ed576620580765dc929f9d2.json  query-1beaf39910fb61f3d18405fdf59eda417ab6b6101a1622d22c6aaaba7576cb1f.json  query-22ddc0612c981a16483e9a68c7ca93901ca7d54481908b20a3cbf081f242dba5.json  query-2381deca0cd62fd0a6ca2c59e68878386e8b15638e747fba563679b7b90ab741.json  query-25ae67147b5b79c490d61e96902e8943c0e7e58fa1d81a2918a4e301410c5ec6.json  query-287e6aea04af9e116d65f6e50f8c68fa98539f64e14824443857ab6876dcc291.json  query-2b6bef30d6a198465eb15380f254cd53687efb590b5fc9266cb17ff52ed141a4.json  query-3370a88665b446d4b8ec25e8af326d625c7ab0eeac60755131518ce676e1c105.json  query-34373824315c43404c46af825a056b9e0f1730c931befbb2b4df9db057c65594.json  query-398e1adba4cc33d77a8ec449daf32599b3ed3ef8a7e5527fa6d7c007a16f005d.json  query-3f77154607ce4732ae123f9c7ec5a496dc7914e75d4b315cc06311c196f39b19.json  query-416849742a45e095924bf4f34345f41d9ebd63c57c291d7ee25fe8e4222edcf8.json  query-434f7c7e560a0485d5e3b84e27c0609e34c131281966e9f115113d98ed918c81.json  query-448f55a9f2ca58b1c19a9be87f03099435228659fd3eef3845c39d78baa9e983.json  query-47862c4c9da2728e858af30788113347114ffe9bc60511e8cdd156818cc27c1e.json  query-4afa907164913ca7defeec78788e3850bcb1a8c9b99525e56f393edb5a3e0257.json  query-4b203a772d2a9c9efb2f98d44a8e21119e4f9515bcd29ad29279923e3a97a036.json  query-51455ee51d8835216d41f48360c83c6d7536e4ea2ed091cc3bda6b96a69f08b8.json  query-515dc42852d060ac24537747db709e562e9142e8b50203b7dfedb43d522d12a2.json  query-517d39a4bfffcf5a94da07a0cce8aa04d9c7698e3ade8303ad06944244147f70.json  query-532029076ab70cd31cb2bf88905db5f7d227a320caa8799866520538ec3fccb5.json  (+76 more)
src/: auth.rs  db.rs  error.rs  ldap.rs  (+7 more)
(+9 files in other folders)
