[package]
name = "plex-catalog-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = {version = "0.4.42", features = ["serde"]}
dotenvy = "0.15"
env_logger = "0.11.8"
futures = "0.3.31"
isahc = {version = "1.7.2", features = ["json"]}
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.19"
openssl = {version = "0.10.64", features = ["vendored"]}
reqwest = {version = "0.12", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
tokio = {version = "1.47.1", features = ["full"]}
