[package]
name = "plex-catalog-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.86"
async-trait = "0.1"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = {version = "0.4.42", features = ["serde"]}
deadpool = { version = "0.10", features = ["managed"] }
dotenvy = "0.15"
futures = "0.3.31"
isahc = { version = "1.7.2", features = ["json"] }
lazy_static = "1.5.0"
ldap3 = "0.11"
log = "0.4.28"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.19"
openssl = {version = "0.10.74", features = ["vendored"]}
rand = "0.8"
reqwest = {version = "0.12.24", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"]}
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-resolver = "0.23"
urlencoding = "2.1"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
